--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       padding: 2rem;
     }
 
-  <a href="about-me.html">About Me</a>
+  <a href="about.html">About Me</a>
 
     h1 {
       color: #2c3e50;
