--- a/about.html
+++ b/about.html
@@ -1,3 +1,11 @@
+<nav class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Me</a></li>
+    <!-- Add other links here -->
+  </ul>
+</nav>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
